--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header class="header-bg"> <!-- Vai segurar o background de ponta a ponta-->
+        <div class="header"> <!-- Vai segurar o container -->
+            <a href="./"><img src="img/bikcraft.svg" alt="Bikcraft"></a>
+            <nav aria-label="primaria">
+                <ul class="header-menu">
+                    <li>
+                         <a href="./bicicletas.html">Bicicletas</a>
+                    </li>
+                    <li>
+                        <a href="./seguros.html">Seguros</a>
+                    </li>
+                    <li>
+                        <a href="./contato.html">Contato</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
